assets/css/style.scss
/* ... */
img.lazy-img.lazy-complete {
	background: none;
}

@keyframes shine {
	100% {
		background-position-x: -200%;
	}
}

/********************************************************************************
********************************** Text styles **********************************
/********************************************************************************/
.main-title {
	-webkit-user-select: none;
	user-select: none;
	margin-top: 0;
	font-size: 40px;
	font-weight: 700;
}

.subheader-text {
	-webkit-user-select: none;
	user-select: none;
	font-size: 24px;
	font-weight: 700;
	margin-bottom: 10px;
}

.body-text {
	font-size: 16px;
	font-weight: 500;
}

.heading {
	-webkit-user-select: none;
	user-select: none;
}

.align-right {
	text-align: right;
}

h1.heading {
	font-size: 32px;
}

@media only screen and (max-width: 1023px) {
	h1.heading {
		text-align: center;
		font-size: 29px;
	}
}

@media only screen and (max-width: 800px) {
	h1.heading {
		font-size: 27px;
	}
}

@media only screen and (max-width: 400px) {
	h1.heading {
		font-size: 24px;
	}
}

/********************************************************************************
* link styles (elements without any class -or- with specific "hoverable" class) *
*********************************************************************************/
a:not([class]),
a.hoverable {
	@include link-animate;
}

a:not([class]):focus-visible,
a.hoverable:focus-visible {
	@extend %link-focusable;
}

@mixin link-hover($hover_or_active) {

	a:not([class]):#{$hover_or_active},
	a.hoverable:#{$hover_or_active} {
		@include link-hoverable;
	}
}

@media (hover: hover) {
	@include link-hover("hover");
}

@media (hover: none) {
	@include link-hover("active");
}

/********************************************************************************
********************************* Button styles *********************************
/********************************************************************************/
.button {
	display: inline-flex;
	-webkit-user-select: none;
	user-select: none;
	font-size: 16px;
	padding: 8px 16px;
	border: 3px solid var(--button-border);
	background: none;
	border-radius: 50px;
	text-decoration: none;
	width: fit-content;
	gap: 5px;
	align-items: flex-end;
	cursor: pointer;
	vertical-align: bottom;
}

.button,
.button * {
	transition: background-color .15s ease, filter .15s ease, transform .3s ease;
}

.button>.button-text {
	pointer-events: none;
	font-size: 14px;
	font-weight: 700;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.button.right-arrow-icon {
	width: 16px;
	height: 16px;
	margin-top: 1px;
}

.button.icon-link {
	transition: transform 200ms ease-in-out;
}

.button.icon-link:hover .button.icon-link:focus-visible {
	cursor: pointer;
	stroke-width: 5;
	margin: 0;
	transform: rotate(15deg);
}

.button.filled {
	background: var(--button-filled-bg);
	border: none;
}

.button.filled:focus-visible {
	@extend %link-focusable;
}

.button.filled>.button-text,
.button.filled>i {
	filter: invert(1);
}

.button.mini {
	font-size: 13px;
	padding: 5px 9px;
}

.button.mini>i {
	padding-bottom: 1px;
}

.button.mini>.button-text {
	font-size: 13px;
}

.button>i.zoom {
	//fixes chrome glitch
	transform-origin: center left;
	transform: scale3d(1, 1, 1);
}

@mixin button-hover($hover_or_active) {

	.button:#{$hover_or_active},
	.button:focus-visible {
		background: var(--button-bg-hover);
	}

	.button:#{$hover_or_active}>i.move,
	.button:focus-visible>i.move {
		transform: translateX(5px);
	}

	.button:#{$hover_or_active}>i.rotate,
	.button:focus-visible>i.rotate {
		transform: rotateZ(45deg);
	}

	.button:#{$hover_or_active}>i.zoom,
	.button:focus-visible>i.zoom {
		transform: scale3d(1.2, 1.2, 1.2);
	}

	.button:#{$hover_or_active}>*,
	.button:focus-visible>* {
		filter: invert(1);
	}

	.button.filled:#{$hover_or_active} {
		background: var(--button-filled-bg-hover);
	}

	.button.mini:#{$hover_or_active}>i.move,
	.button.mini:focus-visible>i.move {
		transform: translateX(2px);
	}
}

@media (hover: hover) {
	@include button-hover("hover");
}

@media (hover: none) {
	@include button-hover("active");
}

/********************************************************************************
****************************** Prettier list style ******************************
/********************************************************************************/
ul,
ol {
	padding-left: 19px;
}

ul.prettier {
	list-style-type: none;
	margin: 0;
	padding-left: 0;
	text-align: left;
}

ul.prettier li:not(:last-of-type) {
	padding-bottom: 13px;
}

ul.prettier li::marker {
	content: '';
}

ul.prettier li::before {
	content: '\f054';
	font-family: 'Font Awesome 6 Free';
	font-size: .8em;
	margin-right: 9px;
	margin-top: -.2em;
	display: inline-block;
	vertical-align: middle;
	color: var(--text);
}

/********************************************************************************
***************** Special case for XDA icon not in fontawesome ******************
/********************************************************************************/
.xda-icon {
	height: 100%;
	padding-top: 1px;
}

@media (prefers-color-scheme: dark) {
	.xda-icon {
		filter: invert(1);
		transition: none !important;
	}
}

/********************************************************************************
************************* CC specific to massi-x domain *************************
/********************************************************************************/

.cc-link {
	@include link-animate(true);
	color: var(--text) !important;
	background-size: 0 0 !important;
}

@mixin cc-link-hover($hover_or_active) {
	.cc-link:#{$hover_or_active} {
		@include link-hoverable(true);
	}
}

@media (hover: hover) {
	@include cc-link-hover("hover");
}

@media (hover: none) {
	@include cc-link-hover("active");
}
/* ... */

